--- a/client/src/styles/SearchArea.css
+++ b/client/src/styles/SearchArea.css
@@ -1,3 +1,42 @@
-/* * {
-  background: pink;
-} */
+.div-title {
+  /* opacity: 50%; */
+  background-color: rgba(117, 110, 221, 0.493);
+  height:fit-content;
+  position: fixed;
+  top: 0;
+  width: 100%;
+} 
+
+.search-title{
+  font-size: 3rem;
+  text-align: center;
+}
+.search-container {
+  margin: 15vh auto 5vh auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.search-input {
+  font-size: 2rem;
+  text-align: center;
+}
+.showing-and-restore-area {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.restore-area {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 6px;
+}
+
+.count-span {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin: 6px;
+}
