--- a/client/src/styles/ticket.css
+++ b/client/src/styles/ticket.css
@@ -1,3 +1,49 @@
-/* * {
-  background-color: blue;
-} */
+.ticket-div {
+  display: flex;
+  justify-content: center;
+}
+.ticket {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+  height: 35vh;
+  border: 1px black solid;
+  border-radius: 1rem;
+  padding: 10px;
+  margin: 10px;
+}
+
+.ticket-title {
+  padding-bottom: 15px;
+}
+.ticket-content {
+  overflow: hidden;
+}
+.ticket-user-email {
+
+}
+.ticket-done {
+
+}
+.ticket-creation-time {
+
+}
+.hideTicketButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.email-date-div {
+  display: flex;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
+.labels {
+  display: flex;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
