--- a/client/src/styles/ticket.css
+++ b/client/src/styles/ticket.css
@@ -1,7 +1,3 @@
-.ticket-div {
-  display: flex;
-  justify-content: center;
-}
 .ticket {
   position: relative;
   display: flex;
@@ -9,31 +5,51 @@
   align-items: center;
   width: 70%;
   height: 35vh;
-  border: 1px black solid;
+  box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.527);
   border-radius: 1rem;
-  padding: 10px;
-  margin: 10px;
+  list-style: none;
+  padding: 0.8rem;
+  width: 40%; 
+  margin-bottom: 2rem;
+  background-color: rgb(126, 124, 221);
+  ;
 }
 
 .ticket-title {
   padding-bottom: 15px;
+  font-size: 1.5rem;
+  width: 70%;
 }
+
 .ticket-content {
-  overflow: hidden;
+  font-size: 1.3rem;
+  overflow: auto;
+  height: 60%;
+  padding: 10px;
 }
+.ticket-content::-webkit-scrollbar {
+  display: none;
+}
+
 .ticket-user-email {
-
+  font-size: 1.2rem;
 }
-.ticket-done {
 
-}
 .ticket-creation-time {
-
+  font-size: 1.2rem;
 }
 .hideTicketButton {
   position: absolute;
   top: 10px;
-  right: 10px;
+  right: 15px;
+  font-size: 1.2rem;
+  padding: 2px;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+.hideTicketButton:hover {
+  color: white;
+  cursor: pointer;
 }
 .email-date-div {
   display: flex;
@@ -44,6 +60,28 @@
 .labels {
   display: flex;
   position: absolute;
+  font-size: 1.2rem;
   bottom: 10px;
-  right: 10px;
+  right: 3px;
 }
+.label {
+  border-radius: 0.5rem;
+  color: white;
+  border: 2px rgba(117, 110, 221) solid;
+
+}
+.email {
+  color: blue;
+}
+.more-or-less {
+  color: blue;
+  cursor: pointer;
+}
+.more-or-less:hover {
+  cursor: pointer;
+  color: white;
+}
+.ticket-labels {
+  padding: 15px;
+}
+
