--- a/client/src/styles/ticketList.css
+++ b/client/src/styles/ticketList.css
@@ -10,5 +10,18 @@
 
 .next-prev-buttons {
   margin: 5px;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
+  font-weight: bold;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.589);
 }
+.next-prev-buttons:hover {
+  color: rgba(255, 255, 255, 0.637);
+  cursor: pointer;
+}
+.tickets-list {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
